# libgnome-games-support

./: .gitlab-ci.yml  .gitmodules  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libgames-scores.doap  libgames-scores.pc.in  libgames-support-1.0.pc.in  libgames-support.doap  libgames-support.pc.in  libgnome-games-support-1.pc.in  libgnome-games-support.doap  meson.build  meson.options  style-checker
games/: Makefile.am  gridframe.vala  meson.build  miniaudio.vapi  sounds.vala
games-scores/: Makefile.am  games-score.c  games-score.h  games-scores-backend.c  games-scores-backend.h  games-scores-dialog.c  games-scores-private.h  games-scores.c
games/scores/: category.vala  context.vala  dialog.vala  directory-importer.vala  history-file-importer.vala  importer.vala  score.vala
gnome-games-support-rs/: Cargo.toml  meson.build
gnome-games-support-rs/gnome-games-support-sys/: Gir.toml.in  meson.build
include/: Makefile.am  games-score.h  games-scores-dialog.h  games-scores.h
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  ab.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  lv.po  meson.build  nb.po  ne.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  (+9 more)
scores/: Makefile.am  context.vala  dialog.vala
src/: Makefile.am  category.vala  context.vala  dialog.vala  name.vala  score.vala  scores.vala  test-scores.vala
subprojects/: miniaudio.wrap
tests/: Makefile.am  meson.build  test-scores.vala
